# NeoText

./: Cargo.toml
core/editor/: Cargo.toml
core/editor/src/: bars.rs  buffer.rs  copy_register.rs  cursor.rs  editor.rs  error.rs  lib.rs  view_window.rs
core/editor/src/modals/: mod.rs  normal.rs
core/editor/tests/: integration_test.rs
core/lsp/: Cargo.toml
core/terminal-port/: Cargo.toml
src/: action.rs  bars.rs  buffer.rs  common.rs  copy_register.rs  cursor.rs  editor.rs  error.rs  highlighter.rs  lib.rs  main.rs  modal.rs  searcher.rs  theme.rs  utils.rs  view_window.rs  viewport.rs
src/lsp/: client.rs  data.rs  mod.rs  parser.rs  protocol.rs
src/modals/: mod.rs  modal.rs  normal.rs
