[package]
name = "text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
derive_more = "0.99.18"
tracing = "0.1.40"
tracing-tree = "0.4.0"
tree-sitter = "0.23.0"
tree-sitter-rust = "0.21.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rangemap = "1.5.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
